src/objects/OUC_Activity_History__c.object
<CustomObject>
    <fields>
        <fullName>ActivityOwnerName__c</fullName>
        <label>ActivityOwnerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Activity Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Object_Identifier__c</fullName>
        <label>Call Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizen_Email_On_Complete__c</fullName>
        <label>Citizen Email On Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Internal Comments (deprecated)</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Sort_Order__c</fullName>
        <label>Display Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Comments__c</fullName>
        <label>External Comments</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutCome__c</fullName>
        <label>OutCome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <label>Public</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurrence_Interval__c</fullName>
        <label>Recurrence Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_This_Task__c</fullName>
        <label>Repeat This Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <label>Responsible Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request History</label>
        <referenceTo>Service_Request_History__c</referenceTo>
        <relationshipName>OUC_Activity_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <label>Task Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Short_Name__c</fullName>
        <label>Task Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SR Activity History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Request_History__c</columns>
        <columns>Task_Code__c</columns>
        <columns>Task_Short_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>External_Comments__c</columns>
        <columns>OutCome__c</columns>
        <columns>Responsible_Party__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CFSA_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>CFSA Queue</label>
        <queue>CFSA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSRImports</fullName>
        <columns>NAME</columns>
        <columns>Service_Request_History__c</columns>
        <columns>Task_Code__c</columns>
        <columns>Task_Short_Name__c</columns>
        <columns>External_Comments__c</columns>
        <columns>OutCome__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Responsible_Party__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Display_Sort_Order__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Id__c</field>
            <operation>startsWith</operation>
            <value>CSR-</value>
        </filters>
        <label>CSR Imported Activities</label>
    </listViews>
    <listViews>
        <fullName>DCRA_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DCRA Queue</label>
        <queue>DCRA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDOE_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DOEE Queue</label>
        <queue>DOEE_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDS_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DDS Queue</label>
        <queue>DDS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DDoT_Cityworks_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DDoT Cityworks</label>
        <queue>DDoT_Cityworks</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DMV_Requests_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DMV Queue</label>
        <queue>DMV_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DOH_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DOH Queue</label>
        <queue>DOH_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPR_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DPR Queue</label>
        <queue>DPR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPW_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DPW Queue</label>
        <queue>DPW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DYRS_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DYRS Queue</label>
        <queue>DYRS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FEMS_Queue_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>FEMS Queue</label>
        <queue>FEMS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Homeless_Services_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Homeless Services</label>
        <queue>Homeless_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OUCTest_OUC_Activity_History</fullName>
        <filterScope>Queue</filterScope>
        <label>OUCTest</label>
        <queue>OUCTest</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>OUC Activity HIstory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SR Activity Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>